alterando alguns detalhes de service e controller pedido e produto